--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://ravi.manjunatha.com/"  # Include trailing slash
+baseurl = "https://www.ravimanjunatha.com/"  # Include trailing slash
 title = "Dataayana"
 theme = "hugo-swift-theme"
 author = "Steve Francia"
